<resources>
    <string name="app_name">星视野</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_catalogue">CatalogueActivity</string>
    <string name="title_activity_secondary_catalogue">二级菜单</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="content_title">我是一个萌萌的标题</string>
    <string name="content_author">-星空学生创新中心-</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_frist">FristActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="introduction">学校\n简介</string>
    <string name="system">教务\n系统</string>
    <string name="scenery">校园\n风光</string>
    <string name="tissue">校级\n组织</string>
    <string name="organization">社团\n协会</string>
    <string name="second">二级\n学院</string>
    <string name="about">关于\n我们</string>
    <string name="bus">华广\n车讯</string>
    <string name="weather">天气\n预报</string>
    <string name="book">星\n购书</string>
    <string name="title_activity_introduction">IntroductionActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_activity_system">SystemActivity</string>
    <string name="title_activity_web">WebActivity</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">XING\nSIGHT</string>
</resources>
