<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <GridLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3">

    <Button
        android:id="@+id/button_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFE242"
        android:padding="40dp"
        android:text="@string/weather"
        android:textSize="12pt" />

    <Button
        android:id="@+id/button_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFE242"
        android:padding="40dp"
        android:text="@string/book"
        android:textSize="12pt" />


    <Button
        android:id="@+id/button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFE242"
        android:padding="40dp"
        android:text="@string/about"
        android:textSize="12pt" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FFE242"
            android:padding="40dp"
            android:text="@string/about"
            android:visibility="invisible"
            android:textSize="12pt" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FFE242"
            android:padding="40dp"
            android:text="@string/about"
            android:visibility="invisible"
            android:textSize="12pt" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FFE242"
            android:padding="40dp"
            android:text="@string/about"
            android:visibility="invisible"
            android:textSize="12pt" />

</GridLayout>

</RelativeLayout>
